scripts/nullaway/wpi/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8.txt
../wpi/urlc58b5c5b73_emiliano_fiuba_2013_2c_7510_tgz-pJ8-test_java_FrameworkTestsJ8/src/main/java/ResultPrinter.java:52: error: [NullAway] dereferenced expression test.getResult() is @Nullable
            buffer.add(test.getResult().print());
                                       ^
    (see http://t.uber.com/nullaway )
1 error
